--- a/nosotros.html
+++ b/nosotros.html
@@ -95,13 +95,13 @@
         <a href="https://www.instagram.com/ale.aburto.v" target="_blank">
           <img src="img/logo_insta.png" alt="Instagram" />
         </a>
-        <a href="https://www.tiktok.com/@tu_usuario" target="_blank">
+        <a href="https://www.tiktok.com/@aleavzq_" target="_blank">
           <img src="img/logo_tiktok.png" alt="TikTok" />
         </a>
-        <a href="https://www.WhatsApp.com" target="_blank">
+        <a href="https://wa.me/qr/7EQEUJOLERJ4F1" target="_blank">
           <img src="img/logo_whatsapp.png" alt="WhatsApp" />
         </a>
-        <a href="https://www.gmail.com" target="_blank">
+        <a href="https://www.gmail.com/alejandraaburtovazquez@gmail.com" target="_blank">
           <img src="img/logo_gmail.png" alt="Gmail" />
         </a>
       </div>
