--- a/servicios.html
+++ b/servicios.html
@@ -54,7 +54,7 @@
                             de forma sencilla y divertida.
                         </p>
                         <p><strong>Requisitos:</strong> Tener un dispositivo con acceso a internet y una cuenta vigilada por tus tutores</p>
-                        <a href="creacion-contenido.html" class="btn btn-primary" target="_blank">Conoce más</a>
+                        <a href="contacto.html" class="btn btn-primary" target="_blank">Conoce más</a>
                     </div>
                 </div>
             </div>
