--- a/servicios.html
+++ b/servicios.html
@@ -36,7 +36,7 @@
 
     <!--Servicios-->
     <main class="container py-5">
-        <h2 class="text-center mb-4">Nuestros </h2>
+        <h2 class="text-center mb-4">Nuestros servicios</h2>
         <p class="lead text-center mb-5">
             En STEAM Makers ofrecemos una variedad de servicios completamente gratuitos y accesibles en cualquier momento, en cualquier lugar con
             acceso a Internet.
